--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
                     <target>10</target>
                 </configuration>
             </plugin>
-
             <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
@@ -82,7 +81,27 @@
             <artifactId>iv4xrDemo</artifactId>
             <version>2.2.4</version> 
         </dependency>
-        
+        <dependency>
+       		<groupId>org.apache.poi</groupId>
+       		<artifactId>poi</artifactId>
+       		<version>5.0.0</version>
+   		</dependency>
+		<dependency>
+       		<groupId>org.apache.poi</groupId>
+       		<artifactId>poi-ooxml</artifactId>
+       		<version>5.0.0</version>
+   		</dependency>
+   		<dependency>
+    		<groupId>au.com.bytecode</groupId>
+    		<artifactId>opencsv</artifactId>
+    		<version>2.4</version>
+		</dependency>
+		<dependency>
+   			<groupId>org.apache.commons</groupId>
+   			<artifactId>commons-lang3</artifactId>
+   			<version>3.9</version>
+		</dependency>
+   		
     </dependencies>
-  
+    
 </project>
