--- a/pom.xml
+++ b/pom.xml
@@ -63,24 +63,19 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
-
         <dependency>
             <groupId>com.github.iv4xr-project</groupId>
             <artifactId>aplib</artifactId>
-            <version>1.2.4</version>
+            <!-- <version>1.4.2</version> -->
+            <version>1.8.4</version>
         </dependency>
-        <!--
         <dependency>
             <groupId>com.github.iv4xr-project</groupId>
-            <artifactId>lab-recruits-api</artifactId>
-            <version>2.2.3-SNAPSHOT</version>
-        </dependency>
-        -->
-        <dependency>  
-            <groupId>com.github.iv4xr-project</groupId>
             <artifactId>iv4xrDemo</artifactId>
-            <version>2.2.4</version> 
+            <!-- <version>2.3.4</version> -->
+            <version>2.5.6</version>
         </dependency>
+
         <dependency>
        		<groupId>org.apache.poi</groupId>
        		<artifactId>poi</artifactId>
@@ -101,7 +96,7 @@
    			<artifactId>commons-lang3</artifactId>
    			<version>3.9</version>
 		</dependency>
-   		
+
     </dependencies>
-    
+
 </project>
