--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>samira.project</groupId>
   <artifactId>searchbased</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
       <build>
         <plugins>
             <plugin>
@@ -17,7 +17,15 @@
             <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
-               <configuration><testFailureIgnore>true</testFailureIgnore></configuration>
+               <configuration>
+                  <testFailureIgnore>true</testFailureIgnore>
+                  <!-- excluding experiments -->
+                  <excludes>
+                  <exclude>**/Test_BigLevel.java</exclude>
+                  <exclude>**/STVRExperiment.java</exclude>
+                  <exclude>%regex[.*onlineSearch.*]</exclude>
+                  </excludes>
+               </configuration>
             </plugin>
             <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
